less/third-party.less
// File: third-party.less
// Note: Import desired files from third party plugins

// Bootstrap Datepicker (http://eternicode.github.io/bootstrap-datepicker,https://github.com/eternicode/bootstrap-datepicker)
@import "bower_components/bootstrap-datepicker/less/datepicker3.less";
.datepicker {
  z-index: 1151 !important; /* Datepicker on modals */
}


// Bootstrap Select (https://github.com/silviomoreto/bootstrap-select,http://silviomoreto.github.io/bootstrap-select/3/)
@import "bower_components/bootstrap-select/less/bootstrap-select.less";
.bootstrap-select.btn-group:not(.input-group-btn),
.bootstrap-select.btn-group[class*="span"] {
  margin-bottom: inherit;
}
.bootstrap-select.btn-group .btn .filter-option {
  .text-overflow();
}


// Bootstrap Tour (https://github.com/sorich87/bootstrap-tour,http://bootstraptour.com/)
@import "bower_components/bootstrap-tour/src/less/bootstrap-tour.less";


// Angular ui-select
@import (less) "bower_components/angular-ui-select/dist/select.css";
.ui-select-match.btn-lg {
  ~ .ui-select-search {
    .input-lg;
  }
}
.ui-select-match.btn-sm {
  ~ .ui-select-search {
    .input-sm;
  }
}

